# Ephemeral-Snitch

./: .gitignore  AGENTS.md  AUDIT.md  README.md  compose.postgres-test.yml  evecor-finalize-session  pg0.py  postgres_session_store.py  pyproject.toml  reduction_sweep.py  requirements.txt  run_session.sh  schema_monoid.sql  session_record.py  snitch-run  snitch-run-secret  snitch_config.py  snitch_daemon.py  snitch_evecor_consumer.py  snitch_launcher.py  snitch_processor.py  snitch_run_secret.py  snitch_session.py
schemas/: session_record.schema.json
scripts/: test-postgres-contract.sh
sql/: roles.sql  session_ledger.sql
tests/: test_finalizer_postgres.py  test_launcher.py  test_launcher_postgres.py  test_postgres_contract.py  test_postgres_session_store.py  test_reducer_postgres.py  test_request_id.py  test_snitch.py  test_snitch_config.py  test_snitch_evecor_consumer.py
